Updated Index and .css
Added individual divs for each square. Updated the .css to style these differently and help scale the gameboard depending on the size of the window.

--- a/index.html
+++ b/index.html
@@ -14,12 +14,57 @@
       <span>High Scores</span>
     </div>
   </div>
-  <div class="mainScreen">Main Screen
-    <div class= "player1Score">A
+  <div class="mainScreen">
+    <div class= "player1Score">
+      <div class="playerBoardText">
+      <p></p>
+      <p></p>
+      Player 1
+      </div>
     </div>
-    <div class= "gameBoard">B
+    <div class= "gameBoardSpace">
+      <div id="gameBoardMap">
+        <h3>Gameboard</h3>
+        <div class="colOne">
+          <div id="sqOne" class="squares">
+          1
+          </div>
+          <div id="sqTwo" class="squares">
+          2
+          </div>
+          <div id="sqThree" class="squares">
+          3
+          </div>
+        </div>
+        <div class="colTwo">
+          <div id="sqFour" class="squares">
+          4
+          </div>
+          <div id="sqFive" class="squares">
+          5
+          </div>
+          <div id="sqSix" class="squares">
+          6
+          </div>
+        </div>
+        <div class="colThree">
+          <div id="sqSeven" class="squares">
+          7
+          </div>
+          <div id="sqEight" class="squares">
+          8
+          </div>
+          <div id="sqNine" class="squares">
+          9
+          </div>
+        </div>
+      </div>
     </div>
-    <div class= "player2Score">C
+    <div class= "player2Score">
+      <div class="playerBoardText">
+        <p></p>
+        <p></p> Player 2
+      </div>
     </div>
   </div>
   </body>
