Really updated .css fixed index.html to include working logic to test if someone has won tic tac toe.

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
       <div id="gameBoardMap">
         <h3>Gameboard</h3>
         <div class="colOne">
-          <div id="sqOne" class="squares">
+          <div id="sqOne" class="squares" class="hvr-grow">
           1
           </div>
-          <div id="sqTwo" class="squares">
+          <div id="sqTwo" class="squares" class="hvr-grow">
           2
           </div>
-          <div id="sqThree" class="squares">
+          <div id="sqThree" class="squares" class="hvr-grow">
           3
           </div>
         </div>
         <div class="colTwo">
-          <div id="sqFour" class="squares">
+          <div id="sqFour" class="squares" class="hvr-grow">
           4
           </div>
           <div id="sqFive" class="squares">
