Game logic is working within the acutal app. You're no longer forced to use the console like a filthy peasant!

--- a/index.html
+++ b/index.html
@@ -28,36 +28,36 @@
       <div id="gameBoardMap">
         <h3>Gameboard</h3>
         <div class="colOne">
-          <div id="sqOne" class="square" class="hvr-grow">
-          1
+          <div id="0" class="square" class="hvr-grow">
+          -
           </div>
-          <div id="sqTwo" class="square" class="hvr-grow">
-          2
+          <div id="1" class="square" class="hvr-grow">
+          -
           </div>
-          <div id="sqThree" class="square" class="hvr-grow">
-          3
+          <div id="2" class="square" class="hvr-grow">
+          -
           </div>
         </div>
         <div class="colTwo">
-          <div id="sqFour" class="square" class="hvr-grow">
-          4
+          <div id="3" class="square" class="hvr-grow">
+          -
           </div>
-          <div id="sqFive" class="square">
-          5
+          <div id="4" class="square">
+          -
           </div>
-          <div id="sqSix" class="square">
-          6
+          <div id="5" class="square">
+          -
           </div>
         </div>
         <div class="colThree">
-          <div id="sqSeven" class="square">
-          7
+          <div id="6" class="square">
+          -
           </div>
-          <div id="sqEight" class="square">
-          8
+          <div id="7" class="square">
+          -
           </div>
-          <div id="sqNine" class="square">
-          9
+          <div id="8" class="square">
+          -
           </div>
         </div>
       </div>
@@ -70,6 +70,6 @@
     </div>
   </div>
   <script src="script/jq.js" type="text/javascript" charset="utf-8" async defer></script>
-
+  <script src="script/app.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
 </html>
