--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <p></p>
       <p></p>
       Player 1
+
+      <div id="p1score">0</div>
       </div>
     </div>
     <div class= "gameBoardSpace">
@@ -66,6 +68,7 @@
       <div class="playerBoardText">
         <p></p>
         <p></p> Player 2
+        <div id="p2score">0</div>
       </div>
     </div>
   </div>
