Updated Player Score after a win. Made a gameOver bool to prevent further gameplay after a win. Committing because it is working and I have a feeling I'm about to break it.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <p></p>
       Player 1
 
-      <div id="p1score">0</div>
+      <div id="p1Score">0</div>
       </div>
     </div>
     <div class= "gameBoardSpace">
@@ -68,7 +68,7 @@
       <div class="playerBoardText">
         <p></p>
         <p></p> Player 2
-        <div id="p2score">0</div>
+        <div id="p2Score">0</div>
       </div>
     </div>
   </div>
