Added functionality to "New Game" button. You can now play multiple games in a row and the player score updates.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class ="navItems">
       <span>Chris' TicTacToe Game!</span>
       <span>Home</span>
-      <span>New Game</span>
+      <span id="newGame">New Game</span>
     </div>
   </div>
   <div class="mainScreen">
