Cleaning shit up.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,38 @@
       <span id="newGame">New Game</span>
     </div>
   </div>
+  <div class="actionCenter">
+    <div>
+      <input id="email" type="text" placeholder="email">
+      <input id="password" type="password" placeholder="password">
+      <input id="register" type="button" value="Register">
+      <input type="button" id="login" value="login">
+      <input type="button" id="list" value="list">
+      <input type="button" id="create" value="create">
+      <input type="button" id="show" value="show">
+      <input type="button" id="join" value="join">
+      <input id="index" type="text" placeholder="index" size="4">
+      <input id="value" type="text" placeholder="value" size="4">
+      <input type="button" id="move" value="move">
+      <input type="button" id="watch" value="watch">
+      <span>JRR Token:
+        <input id="token" type="text" value="token">
+      </span>
+    </div>
+    <p></p>
+    <div>ID:
+      <input id="id" type="text" value="id">
+    </div>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <div>Result:</div>
+    <div>
+      <textarea id="result"></textarea>
+    </div>
+  </div>
   <div class="mainScreen">
     <div class= "player1Score">
       <div class="playerBoardText">
@@ -74,5 +106,6 @@
   </div>
   <script src="script/jq.js" type="text/javascript" charset="utf-8" async defer></script>
   <script src="script/app.js" type="text/javascript" charset="utf-8" async defer></script>
+  <script src="script/api.js" type="text/javascript" charset="utf-8" async defer></script>
   </body>
 </html>
