Little changes. Nothing major. Removed 'updateBoard()'

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class ="navItems">
       <span id="title">Chris' TicTacToe Game!</span>
       <span id="newGame">New Game</span>
+      <!-- <input class="btn" id="newGame" type="button" value="New Game"> -->
       <span id="credentials">
       <input id="email" type="text" placeholder="email">
       <input id="password" type="password" placeholder="password">
